Fixed uneven padding after adding back dock

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -23,6 +23,7 @@
 	justify-content: space-between;
 	align-items: center;
 	z-index: 1;
+	padding: 0 16px;
 }
 
 .my-nav-links {
@@ -30,7 +31,7 @@
 	display: flex;
 	align-items: center;
 	margin: 0;
-	padding: 8px;
+	padding: 8px 0;
 }
 
 .my-nav-link {
